<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@color/black"
    tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

	<TextView
		android:id="@+id/txt_status_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="14sp"
		android:textStyle="bold"
		android:typeface="monospace"
		android:textColor="@color/red"
		android:paddingBottom="20sp"
		android:text="@string/out_status_bar_ready" />


	<LinearLayout
			android:id="@+id/lay_body"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

			<EditText
	        android:id="@+id/imp_body_1"
	        android:maxLines="1"
			android:typeface="monospace"
	        android:inputType="textNoSuggestions|textImeMultiLine"
	        android:layout_width="0dp"
	        android:layout_weight="0.50"
	        android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:background="@color/red"
	    	android:layout_marginRight="2dp"
   		    android:paddingLeft="2dp"
	        android:hint="@string/out_body_1" >
	        <requestFocus />
		    </EditText>

		    <EditText
	        android:id="@+id/imp_body_2"
	        android:maxLines="1"
			android:typeface="monospace"
   	        android:inputType="textNoSuggestions|textImeMultiLine"
	        android:layout_width="0dp"
	        android:layout_weight="0.50"
	        android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:background="@color/red"
			android:layout_marginLeft="2dp"
			android:paddingLeft="2dp"
	        android:hint="@string/out_body_2">
		    </EditText>
			</LinearLayout>    
			
			<RadioGroup 
			android:id="@+id/rad_selector"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
	        android:checkedButton="@+id/rad_occult"
		    android:textColor="@color/red"
			android:orientation="horizontal">
			    <RadioButton android:id="@+id/rad_occult"
		        android:layout_width="0dp"
       	        android:layout_weight="0.33"
		        android:layout_height="wrap_content"
				android:buttonTint="@color/red"
				android:textColor="@color/red"
		        android:text="@string/out_occult"/>
			    <RadioButton android:id="@+id/rad_eclipse"
		        android:layout_width="0dp"
       	        android:layout_weight="0.34"
		        android:layout_height="wrap_content"
				android:buttonTint="@color/red"
				android:textColor="@color/red"
		        android:text="@string/out_eclipse"/>
			    <RadioButton android:id="@+id/rad_transit"
		        android:layout_width="0dp"
       	        android:layout_weight="0.33"
		        android:layout_height="wrap_content"
				android:buttonTint="@color/red"
				android:textColor="@color/red"
		        android:text="@string/out_transit"/>
			</RadioGroup>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/selector_fieldset_background"
		tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

		<TextView
			android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@color/red"
			android:padding="5dp"
			android:textStyle="bold"
			android:text="@string/out_estimated_utc_title"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="46dp"
			android:orientation="horizontal"
			tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

			<TextView
				android:id="@+id/lbl_estimated_utc_1"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:textStyle="bold"
				android:layout_gravity="center_vertical"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:textColor="@color/red"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/out_estimated_utc_start" />

			<TextView
				android:id="@+id/txt_estimated_utc1"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/out_empty_timer"
				android:layout_gravity="center_vertical"
				android:textSize="22sp"
				android:textStyle="bold"
				android:textColor="@color/red"
				android:typeface="monospace" />

			<ImageButton
				android:id="@+id/btn_estimated_utc1"
				android:src="@drawable/clock"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="showUTC1Dialog"
				android:adjustViewBounds="true"
				android:padding="5dp"
				android:background="@color/red"
				android:scaleType="fitCenter"
				android:layout_gravity="center_vertical"
				android:enabled = "false"
				android:clickable = "false"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="46dp"
			android:orientation="horizontal"
			tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

			 <TextView
				android:id="@+id/lbl_estimated_utc_2"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:textStyle="bold"
				android:layout_gravity="center_vertical"
				android:layout_height="wrap_content"
				android:padding="5dp"
			    android:textColor="@color/red"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/out_estimated_utc_end" />

			<TextView
				android:id="@+id/txt_estimated_utc2"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/out_empty_timer"
				android:layout_gravity="center_vertical"
				android:textSize="22sp"
				android:textColor="@color/red"
				android:textStyle="bold"
				android:typeface="monospace" />

			<ImageButton
			android:id="@+id/btn_estimated_utc2"
			android:src="@drawable/clock"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="showUTC2Dialog"
			android:adjustViewBounds="true"
			android:padding="5dp"
			android:background="@color/red"
			android:scaleType="fitCenter"
			android:layout_gravity="center_vertical"
			android:enabled = "false"
			android:clickable = "false" />

		</LinearLayout>

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
    	style="@style/ButtonBar"
        tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="top"
            android:clickable="false"
            android:enabled="false"
            android:onClick="start"
			android:textColor="@color/red"
			android:textStyle="bold"
            style="@style/ButtonBarButton"
			android:background="@drawable/selector_fieldset_background"
            android:text="@string/out_start" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="top"
            android:clickable="false"
            android:enabled="false"
            android:onClick="stop"
			android:textStyle="bold"
			android:textColor="@color/red"
            style="@style/ButtonBarButton"
			android:background="@drawable/selector_fieldset_background"
            android:text="@string/out_stop" />
    </LinearLayout>
    
    <TextView
	        android:id="@+id/lbl_countdown_title"
	    	android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:paddingTop="30sp"
    		android:gravity="center_horizontal"
			android:textColor="@color/red"
	        android:text="@string/out_countdown_title" />
    
    <TextView
        android:id="@+id/txt_countdown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/out_empty_timer"
        android:textSize="35sp"
        android:textStyle="bold"
        android:paddingBottom="10sp"
		android:textColor="@color/red"
        android:typeface="monospace" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >
 
	        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
	        android:orientation="vertical"
	        tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

	        <TextView
	        android:id="@+id/lbl_latitude"
	    	android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:paddingTop="12sp"
    		android:gravity="center_horizontal"
			android:textColor="@color/red"
	        android:text="@string/out_latitude" />
	            
		    <TextView
	        android:id="@+id/txt_latitude"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/out_wait_gps_fix"
	        android:textSize="16sp"
	        android:textStyle="bold"
			android:textColor="@color/red"
	        android:typeface="monospace" />
	        	        
	   </LinearLayout>    
	            
       <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="0.5"
       android:orientation="vertical"
       tools:context="br.eti.erickcouto.occultflashtag.OccultFlashTag" >

	        <TextView
	        android:id="@+id/lbl_longitude"
	    	android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:paddingTop="12sp"
    		android:gravity="center_horizontal"
			android:textColor="@color/red"
	        android:text="@string/out_longitude" />

		    <TextView
	        android:id="@+id/txt_longitude"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/out_wait_gps_fix"
	        android:textSize="16sp"
	        android:textStyle="bold"
			android:textColor="@color/red"
	        android:typeface="monospace" />
	        	            	        
	                    
	        </LinearLayout>            
            
        </LinearLayout>




</LinearLayout>